PAAS/frontend/deployment/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paas-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paas-frontend
  template:
    metadata:
      labels:
        app: paas-frontend
    spec:
      serviceAccountName: paas-frontend-sa
      imagePullSecrets:
        - name: stackit-regcred
      containers:
        - name: paas-frontend
          image: registry.onstackit.cloud/ryan-paas/paas-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
