PAAS/frontend/deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paas-frontend
  namespace: default
  labels:
    app: paas-frontend
spec:
  type: ClusterIP
  selector:
    app: paas-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
